<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="_25">25%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="total">Total:</string>
    <string name="tip">Tip:</string>
    <string name="check_amount">Check amount:</string>
    <string name="party_size">Party size:</string>
    <string name="compute_tip">Compute Tip</string>
    <string name="tips_and_totals_per_person">Tips and Totals (Per Person)</string>
    <string name="_0_00">0.00</string>
    <string name="_1">1</string>
</resources>
